testing background size "contain" instead of cover, the issue being that on computers the website background displays smoothly but on phones it is choppy and blurry. Will implement farther features once primary issue is resolved

--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ to {
    
  background-repeat: no-repeat;
  background-attachment: fixed;
- background-size: cover;
+ background-size: contain;
  position: relative;
      font-weight: 400;
      font-style: normal;
